# Optivox-v1

./: .gitignore  README.md  pyproject.toml  test_query.py
app/: __init__.py  main.py
app/agents/: architect.py  generator.py  hierarchical_crew.py  optimizer.py  query_crew.py  reviewer.py  router.py  tutor.py
app/api/: playground.py  schema_analysis.py
app/audit/: audit_log.py
app/database/: connector.py  schema_extractor.py
app/models/: auth.py  query_plan.py
app/rag/: dialect_seeder.py  drift_detector.py  embedder.py
app/security/: rbac.py  rbac_middleware.py  secrets.py
app/tools/: rag_tool.py  sql_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  MarkdownRenderer.jsx  PlaygroundSection.jsx  index.css  useSession.js
lancedb_data/dialect_docs.lance/_transactions/: 0-b87f5f84-a9c7-442d-95bc-2998e58d2d0d.txn  1-8015678c-b5b8-405b-9196-2230b5afbeda.txn  10-de62ed41-1f87-4c0d-98e5-1da21bb0c6af.txn  11-7a5bb88d-1c9a-4543-a56c-c923e5e15b8e.txn  12-266e12d7-de7e-42da-9cff-beccb5d609f8.txn  13-f22ff6f4-72eb-4ca9-9aaa-f9c37640509b.txn  14-ef35ef99-4079-4fb8-813a-0c35f2e4efd3.txn  15-9cf37626-c261-41cd-ae8a-e0da686121f0.txn  16-81c235a8-802d-4eb9-a93a-aa6f0e6475bb.txn  17-b46d7fe6-15d8-4fc2-b427-9c1da6073368.txn  18-cbe423b6-18e4-49a5-afb0-91bd62364aed.txn  19-03e300e2-3e8b-43b3-8a8e-b2fc7a983fb6.txn  2-58a1cf6c-c3d7-47bb-ba51-ecd9e6c2e1e6.txn  20-d789d6c2-31fc-4a03-a758-95fd83a5c9a7.txn  21-6d938826-74de-4301-af73-bdfdc35ce2f4.txn  22-8bdf3922-c29b-4df6-8c46-3e18e0bcbc7d.txn  23-32118e0b-b966-475e-9a64-fb3791519a69.txn  (+7 more)
(+32 files in other folders)
